# cpp-eindopdracht

./: CMakeLists.txt  kasteelruine.xml  kerkersendraken.db  main.cpp
backend/: Direction.hpp  Door.cpp  Door.hpp  Game.cpp  Game.hpp
backend/enemy/: Enemy.cpp  Enemy.hpp  EnemyFactory.cpp  EnemyFactory.hpp
backend/location/: Location.cpp  Location.hpp  LocationFactory.cpp  LocationFactory.hpp
backend/objects/: Armor.cpp  Armor.hpp  Consumable.cpp  Consumable.hpp  Gold.cpp  Gold.hpp  Item.cpp  Item.hpp  ItemFactory.cpp  ItemFactory.hpp  Weapon.cpp  Weapon.hpp
backend/objects/consumable/: Consumable.hpp  ExperienceBoostConsumable.cpp  ExperienceBoostConsumable.hpp  HealthBoostConsumable.cpp  HealthBoostConsumable.hpp  TeleportationConsumable.cpp  TeleportationConsumable.hpp
frontend/commands/: AttackCommand.cpp  AttackCommand.hpp  ConsumeItemCommand.cpp  ConsumeItemCommand.hpp  EnemyTurnCommand.cpp  EnemyTurnCommand.hpp  ICommand.hpp  LookAtEnemyCommand.cpp  LookAtEnemyCommand.hpp  LookAtItemCommand.cpp  LookAtItemCommand.hpp  LookAtPlayerCommand.cpp  LookAtPlayerCommand.hpp  LookInRoomCommand.cpp  LookInRoomCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  SearchCommand.cpp  SearchCommand.hpp  SearchLocationCommand.cpp  SearchLocationCommand.hpp
frontend/configReader/: FileMapGenerator.cpp  FileMapGenerator.hpp  IMapGenerator.hpp  RandomMapGenerator.cpp  RandomMapGenerator.hpp
frontend/database/: Database.cpp  Database.hpp  Score.hpp
frontend/inputHandler/: AttackInputHandler.cpp  AttackInputHandler.hpp  BaseInputHandler.cpp  BaseInputHandler.hpp  BaseInputHandlerBuilder.cpp  BaseInputHandlerBuilder.hpp  ConsumeInputHandler.cpp  ConsumeInputHandler.hpp  GodmodeInputHandler.cpp  GodmodeInputHandler.hpp  HelpInputManager.cpp  HelpInputManager.hpp  InvalidInputHandler.cpp  InvalidInputHandler.hpp  LookInputHandler.cpp  LookInputHandler.hpp  MoveInputHandler.cpp  MoveInputHandler.hpp  PlaceInputHandler.cpp  PlaceInputHandler.hpp  QuitInputHandler.cpp  QuitInputHandler.hpp  SearchInputHandler.cpp  SearchInputHandler.hpp  TakeInputHandler.cpp  TakeInputHandler.hpp  WaitInputHandler.cpp  WaitInputHandler.hpp  WearInputHandler.cpp  WearInputHandler.hpp
frontend/player/: GodState.cpp  GodState.hpp  IPlayerState.hpp  Player.cpp  Player.hpp  RegularState.cpp  RegularState.hpp
helpers/: BigBrainPointer.hpp  DynamicDoodad.hpp  Logger.hpp  OwningDynamicDoodad.hpp  TypoTrap.hpp
